infra/user-api/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-kotlin-server
spec:
  type: NodePort
  ports:
    - port: 8080
  selector:
    app: spring-kotlin-server
    component: api
