infra/user-api/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
    nginx.ingress.kubernetes.io/proxy-buffer-size: 512k
    nginx.ingress.kubernetes.io/proxy-buffering: 'on'
    nginx.ingress.kubernetes.io/proxy-connect-timeout: 75s
    nginx.ingress.kubernetes.io/proxy-read-timeout: 300s
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
    - secretName: temp-app-tls
      hosts:
        - temp-spring-kotlin-server.tester.com
  rules:
    - host: temp-spring-kotlin-server.tester.com
      http:
        paths:
        - path: /(.*)
          backend:
            service:
              name: spring-kotlin-server
              port:
                number: 8080
          pathType: ImplementationSpecific
